--- a/client/src/components/navbar/navbar.scss
+++ b/client/src/components/navbar/navbar.scss
@@ -1,8 +1,10 @@
+@import  '../../utilities/variables' ;
+
 .navbar-container{
     height: auto;
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
-    background-color: rgb(236, 240, 178);
+    background-color: $color-primary-light;
     .logosec{
         text-align: center;
         
@@ -40,7 +42,7 @@
                 font-weight: bold;
                 padding: 0rem;
                 border-radius: 0.5rem;
-                color: rgb(236, 240, 178);
+                color: $color-primary-light;
                 background-color: red;
                 position: absolute  ;
                 top: 1px;
