--- a/client/src/components/sidebar/sidebar.scss
+++ b/client/src/components/sidebar/sidebar.scss
@@ -1,6 +1,9 @@
+@import '../../utilities/variables.scss';
+
+
 .sidebar-container{
     height: 90vh;
-    overflow: auto;
+    overflow-y: scroll;
     
 
     .sidebar-links{
@@ -13,9 +16,12 @@
         
     }
     .btn-warning{
-        background-color: rgb(236, 240, 178);
+        background-color: $color-primary-light;
         border: none;
-        width: 80%;
+        width: 100%;
+    }
+    .btn-warning:hover{
+        background-color: $color-primary;
     }
 
     .friendslist{
@@ -37,9 +43,20 @@
             transition: all 0.6s ease-in;
         }
         .friend:hover{
-            background-color: rgb(214, 224, 121);
+            background-color: $color-primary;
         }
     }
     
     
+}
+
+::-webkit-scrollbar{
+    width: 5px;
+}
+::-webkit-scrollbar-track{
+    width: 5px;
+    background-color:white;}
+::-webkit-scrollbar-thumb{
+    width: 5px;
+    background-color:$color-primary;
 }
