--- a/client/src/components/navbar/navbar.scss
+++ b/client/src/components/navbar/navbar.scss
@@ -4,7 +4,7 @@
     height: auto;
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
-    background-color: $color-primary-light;
+    background-color: $color-primary;
     .logosec{
         text-align: center;
         
