--- a/client/src/components/createpost/createpost.scss
+++ b/client/src/components/createpost/createpost.scss
@@ -1,9 +1,11 @@
 
 
 .createPostContainer{
+    width: 90%;
+    border-radius: 1rem;
     border: 1px solid rgb(190, 188, 188);
     padding: 1rem;
-    box-shadow: 1px 7px 20px 5px rgba(160,160,160,0.75);
+    box-shadow: 1px 7px 10px 5px rgba(160,160,160,0.75);
     .createPostTop{
         display :flex;
         height: 150px;
