--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -4,7 +4,7 @@
   display: grid;
   -ms-grid-columns: 1fr 3fr 1fr;
       grid-template-columns: 1fr 3fr 1fr;
-  background-color: #ecf0b2;
+  background-color: #d6e079;
 }
 
 .navbar-container .logosec {
