--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -2,6 +2,10 @@
   height: auto;
   display: -ms-grid;
   display: grid;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  z-index: 999;
   -ms-grid-columns: 1fr 3fr 1fr;
       grid-template-columns: 1fr 3fr 1fr;
   background-color: #d6e079;
