--- a/client/src/components/navbar/navbar.scss
+++ b/client/src/components/navbar/navbar.scss
@@ -3,6 +3,9 @@
 .navbar-container{
     height: auto;
     display: grid;
+    position: sticky;
+    top: 0;
+    z-index: 999;
     grid-template-columns: 1fr 3fr 1fr;
     background-color: $color-primary;
     .logosec{
