--- a/client/src/components/rightbar/rightbar.css
+++ b/client/src/components/rightbar/rightbar.css
@@ -36,7 +36,7 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  background-color: #e1e9cc;
+  background-color: #ecf0b2;
   border-radius: 1rem;
   padding: 1rem;
   gap: 1rem;
@@ -45,14 +45,15 @@
       -ms-flex-align: center;
           align-items: center;
   position: relative;
-  -webkit-transition: all ease-in 0.6s;
-  transition: all ease-in 0.6s;
+  -webkit-transition: all ease-in 0.5s;
+  transition: all ease-in 0.5s;
   cursor: pointer;
 }
 
 .contacts-container .singleContact:hover {
   -webkit-transform: scale(1.05);
           transform: scale(1.05);
+  background-color: #d6e079;
 }
 
 .contacts-container img {
