--- a/client/src/components/sidebar/sidebar.css
+++ b/client/src/components/sidebar/sidebar.css
@@ -1,5 +1,5 @@
 .sidebar-container {
-  height: 90vh;
+  height: auto;
   overflow-y: scroll;
 }
 
@@ -22,37 +22,6 @@
 }
 
 .sidebar-container .btn-warning:hover {
-  background-color: #d6e079;
-}
-
-.sidebar-container .friendslist {
-  list-style-type: none;
-  padding: 1rem;
-}
-
-.sidebar-container .friendslist .friend {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  gap: 1rem;
-  border: 1px solid #cfcfcf;
-  margin-bottom: 1rem;
-  padding: 1rem;
-  cursor: pointer;
-  -webkit-transition: all 0.6s ease-in;
-  transition: all 0.6s ease-in;
-}
-
-.sidebar-container .friendslist .friend img {
-  height: 80px;
-  width: 80px;
-  border-radius: 50%;
-}
-
-.sidebar-container .friendslist .friend:hover {
   background-color: #d6e079;
 }
 
