--- a/client/src/components/sidebar/sidebar.scss
+++ b/client/src/components/sidebar/sidebar.scss
@@ -2,7 +2,7 @@
 
 
 .sidebar-container{
-    height: 90vh;
+    height: auto;
     overflow-y: scroll;
     
 
@@ -24,28 +24,28 @@
         background-color: $color-primary;
     }
 
-    .friendslist{
-        list-style-type: none;
-        padding: 1rem;
-        .friend{
-            display: flex;
-            align-items: center;
-            gap: 1rem;
-            border: 1px solid rgb(207, 207, 207);
-            margin-bottom: 1rem;
-            padding: 1rem;
-            img{
-                height: 80px;
-                width: 80px;
-                border-radius: 50%;
-            }
-            cursor: pointer;
-            transition: all 0.6s ease-in;
-        }
-        .friend:hover{
-            background-color: $color-primary;
-        }
-    }
+    // .friendslist{
+    //     list-style-type: none;
+    //     padding: 1rem;
+    //     .friend{
+    //         display: flex;
+    //         align-items: center;
+    //         gap: 1rem;
+    //         border: 1px solid rgb(207, 207, 207);
+    //         margin-bottom: 1rem;
+    //         padding: 1rem;
+    //         img{
+    //             height: 80px;
+    //             width: 80px;
+    //             border-radius: 50%;
+    //         }
+    //         cursor: pointer;
+    //         transition: all 0.6s ease-in;
+    //     }
+    //     .friend:hover{
+    //         background-color: $color-primary;
+    //     }
+    // }
     
     
 }
